feat: load goods from the api

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div id="app-root"></div>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
-        app.start({ dealers: ["id1", "id2", "e.t.c"] });
+        app.start({ dealers: ["0c4aab30", "1efa7e46"] });
       });
     </script>
   </body>
